@@ -1,3 +1,12 @@
+2009-11-29  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	Stop detached threads during Saturn shutdown.
+
+	* Ephra/Saturn.cxx:
+	* Ephra/Saturn.h:
+	Add protected method stop_detached_threads().
+	Call it during Saturn shut-down.
+
 2009-11-28  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Glasses/ZGlass.cxx:
